# sf-hallucinate

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithms.md  api-reference.md  changelog.md  cli.md  contributing.md  index.md  integration-spanforge.md  quickstart.md
src/sf_hallucinate/: __init__.py  __main__.py  _exceptions.py  _llm.py  _types.py  cli.py  eval.py  py.typed
src/sf_hallucinate/integration/: __init__.py  spanforge.py
src/sf_hallucinate/scorers/: __init__.py  answer_relevancy.py  context_relevancy.py
src/sf_hallucinate/scoring/: __init__.py  backends.py  claims.py  contradiction.py  embedding.py  languages.py  nli.py  overlap.py  similarity.py
tests/: conftest.py  test_cli.py  test_eval.py  test_exceptions.py  test_integration.py  test_llm.py  test_scorers.py  test_types.py
tests/scoring/: test_backends.py  test_claims.py  test_contradiction.py  test_embedding.py  test_languages.py  test_nli.py  test_overlap.py  test_similarity.py
